# nagi

./: .assetsignore  .gitignore  .markdownlint.json  .mise.toml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  mise.toml  mkdocs.ja.yml  mkdocs.yml  pyproject.toml  sitemap.xml  versions.json  wrangler.jsonc
.claude/: settings.json
.claude/hooks/: check-worktree-cwd.sh  pre-commit-check.sh
.claude/skills/nagi-review/: REVIEW.md  SKILL.md
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-duckdb/: action.yml
.github/actions/setup-rust/: action.yml
.github/actions/setup-uv/: action.yml
.github/workflows/: ci.yml  deploy-docs.yml  docs-redeploy.yml  docs.yml  publish.yml
0.0/: 404.html  index.html  sitemap.xml
0.0/architecture/: index.html
0.0/architecture/export/: index.html
0.0/architecture/mcp/: index.html
0.0/architecture/notifications/: index.html
0.0/architecture/storage/: index.html
0.0/integrations/: index.html
0.0/ja/: 404.html  index.html  sitemap.xml
0.0/ja/architecture/: index.html
0.0/ja/integrations/: index.html
0.0/ja/search/: search_index.json
0.0/ja/stylesheets/: extra.css
0.0/operations/deployment/: index.html
0.0/overview/concepts/: index.html
0.0/overview/get-started/: index.html
0.0/overview/quickstart/: index.html
0.0/reference/cli/: index.html
0.0/reference/environment-variables/: index.html
0.0/reference/glossary/: index.html
0.0/reference/project/: index.html
0.0/reference/resources/: index.html
0.0/schemas/: ConnectionSpec.json  OriginSpec.json  SuspendedInfo.json  SyncStep.json
0.0/search/: search_index.json
crates/nagi-core/: Cargo.toml  README.md
crates/nagi-core/src/: compile.rs  config.rs  cron.rs  db.rs  dbt.rs  dbt_profile.rs  duration.rs  evaluate.rs  export.rs  init.rs  interface.rs  kind.rs  lib.rs  log.rs  ls.rs  notify.rs  origin.rs  py.rs  runtime.rs  schema.rs  select.rs  serve.rs  status.rs  storage.rs  sync.rs
crates/nagi-core/src/db/: bigquery.rs
crates/nagi-core/src/dbt/: cloud.rs  manifest.rs  origin.rs  profile.rs
crates/nagi-core/src/evaluate/: boolean.rs  command.rs  condition.rs  freshness.rs
crates/nagi-core/src/interface/: compile.rs  evaluate.rs  export.rs  format.rs  init.rs  inspect.rs  ls.rs  py.rs  schema.rs  select.rs  sync.rs
crates/nagi-core/src/kind/: asset.rs  conditions.rs  connection.rs  desired_group.rs  origin.rs  source.rs  sync.rs
crates/nagi-core/src/kind/connection/: bigquery.rs
crates/nagi-core/src/kind/origin/: dbt.rs
crates/nagi-core/src/kind/origin/dbt/: expand.rs
crates/nagi-core/src/log/: evaluate.rs  file.rs  schema.rs  subscriber.rs  sync.rs
crates/nagi-core/src/notify/: slack.rs
crates/nagi-core/src/runtime/: compile.rs  config.rs  cron.rs  duration.rs  evaluate.rs  export.rs  inspect.rs  kind.rs  log.rs  notify.rs  select.rs  serve.rs  status.rs  storage.rs  subprocess.rs  sync.rs
crates/nagi-core/src/runtime/compile/: categorize.rs  dbt.rs  graph.rs  load.rs  output.rs  template.rs
crates/nagi-core/src/runtime/evaluate/: command.rs
crates/nagi-core/src/runtime/inspect/: bigquery.rs
crates/nagi-core/src/runtime/kind/: asset.rs  condition.rs  connection.rs  identity.rs  origin.rs  sync.rs
crates/nagi-core/src/runtime/kind/connection/: bigquery.rs  dbt.rs  duckdb.rs  snowflake.rs  sql.rs
crates/nagi-core/src/runtime/kind/origin/: dbt.rs
crates/nagi-core/src/runtime/kind/origin/dbt/: cloud.rs  expand.rs  generate.rs  manifest.rs  mesh.rs
crates/nagi-core/src/runtime/log/: evaluate.rs  file.rs  schema.rs  subscriber.rs  sync.rs
crates/nagi-core/src/runtime/notify/: slack.rs
crates/nagi-core/src/runtime/serve/: controller.rs  graph.rs  guardrail.rs  queue.rs  reconciler.rs  scheduler.rs  state.rs  suspended.rs
crates/nagi-core/src/runtime/storage/: local.rs  remote.rs
crates/nagi-core/src/runtime/sync/: command.rs
crates/nagi-core/src/serve/: controller.rs  graph.rs  queue.rs  reconciler.rs  state.rs  suspended.rs
crates/nagi-core/src/storage/: local.rs  lock.rs  remote.rs
crates/nagi-core/src/sync/: execute.rs
crates/nagi-schema-gen/: Cargo.toml
crates/nagi-schema-gen/src/: main.rs
docs/: cli.md  concepts.md  get-started.md  glossary.md  index.md  mkdocs.ja.yml  mkdocs.yml  quickstart.md
docs/architecture/: export.md  mcp.md  notifications.md  serve-restart.md  serve-scenarios.md  serve.md  storage.md
docs/architecture/serve/: internals.md  restart.md  scenarios.md
docs/configurations/: project.md
docs/configurations/resources/: asset.md  conditions.md  index.md  origin.md  source.md  sync.md
docs/en/: index.md
docs/en/architecture/: export.md  index.md  mcp.md  notifications.md  storage.md
docs/en/integrations/: index.md
docs/en/overview/: concepts.md  get-started.md  quickstart.md
docs/en/reference/: cli.md  environment-variables.md  glossary.md  project.md
docs/integrations/: dbt-cloud.md  dbt-core.md
docs/integrations/dbt/: cloud.md  core.md  resource-generation.md
docs/ja/: index.md
docs/ja/architecture/: index.md  (+3 more)
docs/overview/: concepts.md  get-started.md  quickstart.md
docs/reference/: cli.md  glossary.md  project.md
docs/schemas/: AssetEvalResult.json  AssetSpec.json  ConditionsSpec.json  ConnectionSpec.json  DesiredGroupSpec.json  EvaluateLogEntry.json  LockInfo.json  Metadata.json  NagiConfig.json  NagiKind.json  OnDriftEntry.json  OriginSpec.json  SourceSpec.json  SuspendedInfo.json  SyncLogEntry.json  SyncSpec.json  SyncStep.json
examples/quickstart/: .gitignore  nagi.yaml
ja/: index.html
ja/0.0/: 404.html  index.html  sitemap.xml
python/: README.md
python/nagi_cli/: main.py  mcp.py  output.py
python/tests/: helper.py  test_compile.py  test_evaluate.py  test_init.py  test_mcp.py  test_serve.py  test_status.py  test_sync.py
scripts/: check_doc_rules.sh  check_required_files.sh  gen_schema_docs.py  generate_sitemap_index.py  update_versions.py
scripts/tests/: test_generate_sitemap_index.py  test_update_versions.py
(+196 files in other folders)
