[project]
name = "nagi-cli"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.scripts]
nagi = "nagi_cli.main:cli"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "ty>=0.0.1a7",
]

[tool.ruff]
src = ["python"]
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[[tool.ty.overrides]]
include = ["python/nagi_cli/commands/*.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.maturin]
manifest-path = "crates/nagi-core/Cargo.toml"
features = ["python"]
python-source = "python"
module-name = "nagi_cli._nagi_core"
