[project]
name = "nagi-cli"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]

[project.scripts]
nagi = "nagi_cli.main:cli"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
lint = [
    "ruff>=0.11",
    "ty>=0.0.1a7",
]
test = [
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.0",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.0",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "docs"},
]

[tool.ruff]
src = ["python"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[[tool.ty.overrides]]
include = ["python/nagi_cli/commands/*.py", "python/nagi_cli/mcp.py", "python/tests/*.py", "python/tests/integration/*.py", "python/tests/nagi_cli/*.py", "python/tests/nagi_cli/commands/*.py", "python/tests/scenario/*.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
markers = [
    "integration: tests that require real DB connections and CLI execution",
    "scenario: end-to-end serve scenario tests verifying reconciliation loop behavior",
]

[tool.uv]
exclude-newer = "7 days"
cache-keys = [{ file = "crates/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.maturin]
manifest-path = "crates/nagi-core/Cargo.toml"
features = ["python"]
python-source = "python"
module-name = "nagi_cli._nagi_core"
