[project]
name = "nagi-cli"
dynamic = ["version"]
description = "A reconciliation engine that declaratively defines the desired state of data and automatically converges toward that state"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "The Nagi Contributors" },
]
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]
keywords = ["reconciliation", "desired-state", "drift-detection", "data-pipeline", "data-quality"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[project.optional-dependencies]
mcp = ["mcp>=1.2.0"]

[project.urls]
Homepage = "https://nagi-project.dev/"
Repository = "https://github.com/nagi-project/nagi"
Documentation = "https://nagi-project.dev/"
Issues = "https://github.com/nagi-project/nagi/issues"

[project.scripts]
nagi = "nagi_cli.main:cli"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
lint = [
    "ruff>=0.11",
    "ty>=0.0.1a7",
]
test = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "pytest-xdist>=3.0",
]
dbt = [
    "dbt-core>=1.11.7",
    "dbt-duckdb>=1.10.1",
]
docs = [
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.0",
]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    {include-group = "dbt"},
    {include-group = "docs"},
]

[tool.ruff]
src = ["python"]
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]

[[tool.ty.overrides]]
include = ["python/nagi_cli/*.py", "python/nagi_cli/commands/*.py", "python/tests/*.py", "python/tests/integration/*.py", "python/tests/nagi_cli/*.py", "python/tests/nagi_cli/commands/*.py", "python/tests/scenario/*.py"]

[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.pytest.ini_options]
pythonpath = ["scripts"]
markers = [
    "integration: tests that require real DB connections and CLI execution",
    "scenario: end-to-end serve scenario tests verifying reconciliation loop behavior",
]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv]
exclude-newer = "7 days"
cache-keys = [{ file = "crates/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[tool.maturin]
manifest-path = "crates/nagi-core/Cargo.toml"
features = ["python"]
python-source = "python"
module-name = "nagi_cli._nagi_core"
include = [{ path = "LICENSE", format = "sdist" }]
