[package]
name = "nagi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "1"
humantime = "2"
croner = "2"
dirs = "5"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process"] }
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = "10"
