[package]
name = "nagi-core"
version = "0.0.1"
edition = "2021"

[lib]
name = "nagi_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
humantime = "2"
dirs = "6"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "process", "time", "sync", "signal"] }
chrono = "0.4"
ureq = { version = "3", features = ["json"] }
jsonwebtoken = { version = "10", features = ["rust_crypto"], optional = true }
rsa = { version = "0.9", optional = true }
sha2 = { version = "0.11", optional = true }
base64 = { version = "0.22", optional = true }
rusqlite = { version = "0.39", features = ["bundled"] }
schemars = "1.2"
object_store = { version = "0.13", features = ["gcp", "aws"] }
sqlparser = "0.61"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pyo3 = { version = "0.28", features = ["extension-module"], optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Environment", "Win32_System_Threading", "Win32_Security"] }

[features]
default = ["bigquery", "snowflake"]
python = ["pyo3"]
bigquery = ["dep:jsonwebtoken"]
snowflake = ["dep:jsonwebtoken", "dep:rsa", "dep:sha2", "dep:base64"]

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }
